--- a/templates/actor/parts/actor-main.html
+++ b/templates/actor/parts/actor-main.html
@@ -3,7 +3,9 @@
     <div class="box expertise-grid">
       <h3>{{localize "ATDC.actor.expertise.professionalHistory.label"}}</h3>
       <div><!-- empty --></div>
-      <h3>{{localize "ATDC.actor.expertise.label"}}</h3>
+      <!-- <div class="flexrow expertise-header"> -->
+        <h3>{{localize "ATDC.actor.expertise.label"}} <a class="clickable" data-roll-type="info-expertise" title="info"><i class="fa-regular fa-xs fa-circle-info"></i></a></h3>
+      <!-- </div> -->
       <input class="underline-input" type="text" id="nation-org" name="system.nationOrganization" value="{{system.nationOrganization}}" placeholder="{{localize "ATDC.actor.expertise.nationOrganisation.placeholder"}}">
       <div><!-- empty --></div>
       <input class="underline-input" type="text" id="init-expertise" value="{{localize "ATDC.actor.expertise.initial.value"}}" disabled>
@@ -85,7 +87,7 @@
 
   <div class="actions">
     <div class="collapsable box">
-      <a class="clickable" data-roll-type="investigate" title="roll" data-item-id=""><i class="fa-regular fa-dice"></i>{{localize "ATDC.actor.actions.label"}}</a>
+      <a class="clickable float" data-roll-type="investigate" title="roll"><i class="fa-regular fa-dice"></i>{{localize "ATDC.actor.actions.label"}}</a>
       <details>
         <summary>{{localize "ATDC.actor.actions.investigate.label"}}</summary>
         <p>{{localize "ATDC.actor.actions.investigate.description"}}</p>
@@ -93,23 +95,19 @@
     </div>
 
     <div class="collapsable box">
-      <a class="clickable" data-roll-type="takeThemOut" title="roll" data-item-id=""><i class="fa-regular fa-dice"></i>{{localize "ATDC.actor.actions.label"}}</a>
+      <a class="clickable float" data-roll-type="takeThemOut" title="roll"><i class="fa-regular fa-dice"></i>{{localize "ATDC.actor.actions.label"}}</a>
       <details>
         <summary>{{localize "ATDC.actor.actions.takeThemOut.label"}}</summary>
-        <p>{{localize "ATDC.actor.actions.takeThemOut.description"}}</p>
-      </details>
-    </div>
-
-    <div class="collapsable box">
-      <a class="clickable" data-roll-type="harm" title="roll" data-item-id=""><i class="fa-regular fa-dice"></i>{{localize "ATDC.actor.actions.label"}}</a>
-      <details>
-        <summary>{{localize "ATDC.actor.actions.harm.label"}}</summary>
-        <p>{{localize "ATDC.actor.actions.harm.description"}}</p>
+        <p>
+          {{localize "ATDC.actor.actions.takeThemOut.description"}}
+          <br><br>
+          <a class="clickable" data-roll-type="harm" title="harm-roll"><i class="fa-regular fa-dice"></i>{{localize "ATDC.actor.actions.takeThemOut.harm.label"}}</a>
+        </p>
       </details>
     </div>
     
     <div class="collapsable box">
-      <a class="clickable" data-roll-type="cover" title="roll" data-item-id=""><i class="fa-regular fa-dice"></i>{{localize "ATDC.actor.actions.label"}}</a>
+      <a class="clickable float" data-roll-type="cover" title="roll"><i class="fa-regular fa-dice"></i>{{localize "ATDC.actor.actions.label"}}</a>
       <details>
         <summary>{{localize "ATDC.actor.actions.cover.label"}}</summary>
         <p>{{localize "ATDC.actor.actions.cover.description"}}</p>
@@ -117,7 +115,7 @@
     </div>
 
     <div class="collapsable box">
-      <a class="clickable" data-roll-type="flee" title="roll" data-item-id=""><i class="fa-regular fa-dice"></i>{{localize "ATDC.actor.actions.label"}}</a>
+      <a class="clickable float" data-roll-type="flee" title="roll"><i class="fa-regular fa-dice"></i>{{localize "ATDC.actor.actions.label"}}</a>
       <details>
         <summary>{{localize "ATDC.actor.actions.flee.label"}}</summary>
         <p>{{localize "ATDC.actor.actions.flee.description"}}</p>
@@ -125,17 +123,25 @@
     </div>
 
     <div class="collapsable box">
-      <a class="clickable" data-roll-type="chase" title="roll" data-item-id=""><i class="fa-regular fa-dice"></i>{{localize "ATDC.actor.actions.label"}}</a>
+      <a class="clickable float" data-roll-type="chase" title="roll"><i class="fa-regular fa-dice"></i>{{localize "ATDC.actor.actions.label"}}</a>
       <details>
         <summary>{{localize "ATDC.actor.actions.chase.label"}}</summary>
         <p>{{localize "ATDC.actor.actions.chase.description"}}</p>
       </details>
     </div>
 
+    <div class="collapsable box">
+      <a class="clickable float" data-roll-type="doSomethingElse" title="roll"><i class="fa-regular fa-dice"></i>{{localize "ATDC.actor.actions.label"}}</a>
+      <details>
+        <summary>{{localize "ATDC.actor.actions.doSomethingElse.label"}}</summary>
+        <p>{{localize "ATDC.actor.actions.doSomethingElse.description"}}</p>
+      </details>
+    </div>
+
     <hr>
     <p class="seek-relief-info">{{localize "ATDC.actor.seekRelief.info"}}</p>
     <div class="collapsable box">
-      <a data-roll-type="" title="roll" data-item-id=""><i class="fa-regular fa-dice"></i>{{localize "ATDC.actor.actions.label"}}</a>
+      <a class="clickable float" data-roll-type="" title="roll"><i class="fa-regular fa-dice"></i>{{localize "ATDC.actor.actions.label"}}</a>
       <details>
         <summary>{{localize "ATDC.actor.seekRelief.behaveBadly.label"}}</summary>
         <p>{{localize "ATDC.actor.seekRelief.behaveBadly.description"}}</p>
@@ -143,7 +149,7 @@
     </div>
 
     <div class="collapsable box">
-      <a data-roll-type="" title="roll" data-item-id=""><i class="fa-regular fa-dice"></i>{{localize "ATDC.actor.actions.label"}}</a>
+      <a class="clickable float" data-roll-type="" title="roll"><i class="fa-regular fa-dice"></i>{{localize "ATDC.actor.actions.label"}}</a>
       <details>
         <summary>{{localize "ATDC.actor.seekRelief.vice.label"}}</summary>
         <p>{{localize "ATDC.actor.seekRelief.vice.description"}}</p>
@@ -151,7 +157,15 @@
     </div>
 
     <div class="collapsable box">
-      <a class="clickable" data-roll-type="" title="roll" data-item-id=""><i class="fa-regular fa-dice"></i>{{localize "ATDC.actor.actions.label"}}</a>
+      <a class="clickable float" data-roll-type="" title="roll"><i class="fa-regular fa-dice"></i>{{localize "ATDC.actor.actions.label"}}</a>
+      <details>
+        <summary>{{localize "ATDC.actor.seekRelief.seekGuidance.label"}}</summary>
+        <p>{{localize "ATDC.actor.seekRelief.seekGuidance.description"}}</p>
+      </details>
+    </div>
+
+    <div class="collapsable box">
+      <a class="clickable float" data-roll-type="" title="roll"><i class="fa-regular fa-dice"></i>{{localize "ATDC.actor.actions.label"}}</a>
       <details>
         <summary>{{localize "ATDC.actor.seekRelief.seekSolaceRelationship.label"}}</summary>
         <p>{{localize "ATDC.actor.seekRelief.seekSolaceRelationship.description"}}</p>
@@ -159,20 +173,13 @@
     </div>
     
     <div class="collapsable box">
-      <a data-roll-type="" title="roll" data-item-id=""><i class="fa-regular fa-dice"></i>{{localize "ATDC.actor.actions.label"}}</a>
+      <a class="clickable float" data-roll-type="" title="roll"><i class="fa-regular fa-dice"></i>{{localize "ATDC.actor.actions.label"}}</a>
       <details>
         <summary>{{localize "ATDC.actor.seekRelief.revealHistory.label"}}</summary>
         <p>{{localize "ATDC.actor.seekRelief.revealHistory.description"}}</p>
       </details>
     </div>
     
-    <div class="collapsable box">
-      <a data-roll-type="" title="roll" data-item-id=""><i class="fa-regular fa-dice"></i>{{localize "ATDC.actor.actions.label"}}</a>
-      <details>
-        <summary>{{localize "ATDC.actor.seekRelief.seekReliefHorror.label"}}</summary>
-        <p>{{localize "ATDC.actor.seekRelief.seekReliefHorror.description"}}</p>
-      </details>
-    </div>
   </div>
   
 </div>
