got seek relief moves working

--- a/templates/actor/parts/actor-main.html
+++ b/templates/actor/parts/actor-main.html
@@ -138,10 +138,11 @@
       </details>
     </div>
 
-    <hr>
+    <hr> <!-- Seek Releif from the Horror -->
+    
     <p class="seek-relief-info">{{localize "ATDC.actor.seekRelief.info"}}</p>
     <div class="collapsable box">
-      <a class="clickable float" data-roll-type="" title="roll"><i class="fa-regular fa-dice"></i>{{localize "ATDC.actor.actions.label"}}</a>
+      <a class="clickable float" data-roll-type="behaveBadly" title="roll"><i class="fa-regular fa-dice"></i>{{localize "ATDC.actor.actions.label"}}</a>
       <details>
         <summary>{{localize "ATDC.actor.seekRelief.behaveBadly.label"}}</summary>
         <p>{{localize "ATDC.actor.seekRelief.behaveBadly.description"}}</p>
@@ -149,7 +150,7 @@
     </div>
 
     <div class="collapsable box">
-      <a class="clickable float" data-roll-type="" title="roll"><i class="fa-regular fa-dice"></i>{{localize "ATDC.actor.actions.label"}}</a>
+      <a class="clickable float" data-roll-type="indulgeVice" title="roll"><i class="fa-regular fa-dice"></i>{{localize "ATDC.actor.actions.label"}}</a>
       <details>
         <summary>{{localize "ATDC.actor.seekRelief.vice.label"}}</summary>
         <p>{{localize "ATDC.actor.seekRelief.vice.description"}}</p>
@@ -157,7 +158,7 @@
     </div>
 
     <div class="collapsable box">
-      <a class="clickable float" data-roll-type="" title="roll"><i class="fa-regular fa-dice"></i>{{localize "ATDC.actor.actions.label"}}</a>
+      <a class="clickable float" data-roll-type="seekGuidance" title="roll"><i class="fa-regular fa-dice"></i>{{localize "ATDC.actor.actions.label"}}</a>
       <details>
         <summary>{{localize "ATDC.actor.seekRelief.seekGuidance.label"}}</summary>
         <p>{{localize "ATDC.actor.seekRelief.seekGuidance.description"}}</p>
@@ -165,7 +166,7 @@
     </div>
 
     <div class="collapsable box">
-      <a class="clickable float" data-roll-type="" title="roll"><i class="fa-regular fa-dice"></i>{{localize "ATDC.actor.actions.label"}}</a>
+      <a class="clickable float" data-roll-type="seekSolace" title="roll"><i class="fa-regular fa-dice"></i>{{localize "ATDC.actor.actions.label"}}</a>
       <details>
         <summary>{{localize "ATDC.actor.seekRelief.seekSolaceRelationship.label"}}</summary>
         <p>{{localize "ATDC.actor.seekRelief.seekSolaceRelationship.description"}}</p>
@@ -173,7 +174,7 @@
     </div>
     
     <div class="collapsable box">
-      <a class="clickable float" data-roll-type="" title="roll"><i class="fa-regular fa-dice"></i>{{localize "ATDC.actor.actions.label"}}</a>
+      <a class="clickable float" data-roll-type="revealHistoryTogether" title="roll"><i class="fa-regular fa-dice"></i>{{localize "ATDC.actor.actions.label"}}</a>
       <details>
         <summary>{{localize "ATDC.actor.seekRelief.revealHistory.label"}}</summary>
         <p>{{localize "ATDC.actor.seekRelief.revealHistory.description"}}</p>
