--- a/templates/item/item-contact-sheet.html
+++ b/templates/item/item-contact-sheet.html
@@ -1,29 +1,22 @@
-<form class="{{cssClass}} {{item.type}} sheet" autocomplete="off">
-  <header class="sheet-header">
-    <img class="profile-img" src="{{item.img}}" data-edit="img" title="{{item.name}}"/>
-    <div class="header-fields">
-      <h1 class="charname"><input name="name" type="text" value="{{item.name}}" placeholder="Name"/></h1>
+<form class="{{cssClass}} {{item.type}} sheet flexrow" autocomplete="off">
+  <img class="profile-img" src="{{item.img}}" data-edit="img" title="{{item.name}}"/>
+  <div class="header-fields">
+    <h1><input name="name" type="text" value="{{item.name}}" placeholder="{{localize "ATDC.item.name.placeholder"}}"/></h1>
+    <div class="grid grid-3col">
+      <div class="blown">
+        <input type="checkbox" name="system.expertise.blown" {{checked system.expertise.blown}}>
+        <label class="resource-label">{{localize "ATDC.item.contact.blown.label"}}</label>
+      </div>
+      <div class="expertise">
+        <select name="system.expertise.index">
+          {{#select system.expertise.index}}
+            {{#each system.expertise.options as |option key|}}
+              <option value="{{key}}">{{localize option}}</option>
+            {{/each}}
+          {{/select}}
+        </select>
+      </div>
     </div>
-  </header>
-
-  {{!-- Sheet Tab Navigation --}}
-  <nav class="sheet-tabs tabs" data-group="primary">
-    <a class="item" data-tab="description">Description</a>
-    <a class="item" data-tab="attributes">Attributes</a>
-  </nav>
-
-  {{!-- Sheet Body --}}
-  <section class="sheet-body">
-
-    {{!-- Description Tab --}}
-    <div class="tab" data-group="primary" data-tab="description">
-      {{editor system.description target="system.description" rollData=rollData button=true owner=owner editable=editable}}
-    </div>
-
-    {{!-- Attributes Tab --}}
-    <div class="tab attributes" data-group="primary" data-tab="attributes">
-      {{!-- As you add new fields, add them in here! --}}
-    </div>
-  </section>
-
+    <textarea type="text" name="system.description" value="{{system.description}}">{{system.description}}</textarea>
+  </div>
 </form>
