--- a/templates/item/item-gear-sheet.html
+++ b/templates/item/item-gear-sheet.html
@@ -1,32 +1,17 @@
-<form class="{{cssClass}} {{item.type}} sheet" autocomplete="off">
-  <header class="sheet-header">
-    <img class="profile-img" src="{{item.img}}" data-edit="img" title="{{item.name}}"/>
-    <div class="header-fields">
-      <h1 class="charname"><input name="name" type="text" value="{{item.name}}" placeholder="{{localize "ATDC.item.name.placeholder"}}"/></h1>
-      <div class="grid grid-2col">
-        <div class="resource">
-          <label class="resource-label">{{localize "ATDC.item.gear.tags.label"}}</label>
-          <input type="text" name="system.tags" value="{{system.tags}}" data-dtype="String"/>
-        </div>
-        <div class="resource">
-          <label class="resource-label">{{localize "ATDC.item.gear.load.label"}}</label>
-          <input type="text" name="system.load" value="{{system.load}}" data-dtype="Number"/>
-        </div>
+<form class="{{cssClass}} {{item.type}} sheet flexrow" autocomplete="off">
+  <img class="profile-img" src="{{item.img}}" data-edit="img" title="{{item.name}}"/>
+  <div class="header-fields">
+    <h1><input name="name" type="text" value="{{item.name}}" placeholder="{{localize "ATDC.item.name.placeholder"}}"/></h1>
+    <div class="grid grid-2col">
+      <div class="resource">
+        <label class="resource-label">{{localize "ATDC.item.gear.tags.label"}}</label>
+        <input type="text" name="system.tags" value="{{system.tags}}" data-dtype="String"/>
+      </div>
+      <div class="resource">
+        <label class="resource-label">{{localize "ATDC.item.gear.load.label"}}</label>
+        <input type="text" name="system.load" value="{{system.load}}" data-dtype="Number"/>
       </div>
     </div>
-  </header>
-
-  {{!-- Sheet Tab Navigation --}}
-  <nav class="sheet-tabs tabs" data-group="primary">
-    <a class="item" data-tab="description">{{localize "ATDC.item.description.label"}}</a>
-  </nav>
-
-  {{!-- Sheet Body --}}
-  <section class="sheet-body">
-
-    {{!-- Description Tab --}}
-    <div class="tab" data-group="primary" data-tab="description">
-      {{editor system.description target="system.description" rollData=rollData button=true owner=owner editable=editable}}
-    </div>
-  </section>
+    <textarea type="text" name="system.description" value="{{system.description}}">{{system.description}}</textarea>
+  </div>
 </form>
