--- a/scss/components/_forms.scss
+++ b/scss/components/_forms.scss
@@ -412,3 +412,35 @@ nav.sheet-tabs {
     height: 94px;
   }
 }
+
+.npc {
+  height: 100%;
+
+  header {
+      height: 100%;
+      
+      input[type=text] {
+          text-align: center;
+          font-size: 2em;
+          text-transform: uppercase;
+          margin: 5px 0;
+          padding: 20px;
+      }
+
+      textarea {
+          resize: none;
+      }
+  }
+
+  .notes {
+      height: 215px;
+      border-radius: 5px;
+      border: 2px solid #00000047;
+      padding: 0 5px 0 5px;
+      background: rgba(0, 0, 0, 0.05);
+
+      .editor {
+          height: 100%;
+      }
+  }
+}
