--- a/scss/components/_items.scss
+++ b/scss/components/_items.scss
@@ -31,6 +31,7 @@
   overflow-y: auto;
   scrollbar-width: thin;
   color: $c-tan;
+  width: -webkit-fill-available;
 
   // Child lists
   .item-list {
