fixed a bug in harm

--- a/templates/dialog/harm.hbs
+++ b/templates/dialog/harm.hbs
@@ -14,15 +14,19 @@
         <hr>
         <div>
             <input type="radio" id="namelessPawn" name="rollBonus" value="3">
-            <label for="namelessPawn">+3 if they are nameless pawns</label>
+            <label for="namelessPawn">+3 if they are <b>Nameless Mortal Pawns</b></label>
         </div>
         <div>
             <input type="radio" id="namelessPawnLeader" name="rollBonus" value="2">
-            <label for="namelessPawnLeader">+2 if they are the leader of nameless pawns</label>
+            <label for="namelessPawnLeader">+2 if they are <b>the Leader of Nameless Mortal Pawns</b></label>
+        </div>
+        <div>
+            <input type="radio" id="namedMortalPawn" name="rollBonus" value="0">
+            <label for="namedMortalPawn">+0 if they are <b>a Named Mortal Pawn</b></label>
         </div>
         <div>
             <input type="radio" id="supernatural" name="rollBonus" value="-1">
-            <label for="supernatural">-1 if they are a Supernatural</label>
+            <label for="supernatural">-1 if they are <b>a Supernatural</b></label>
         </div>
     </form>
     </br>
