--- a/templates/actor/actor-npc-sheet.html
+++ b/templates/actor/actor-npc-sheet.html
@@ -8,14 +8,41 @@
     <textarea name="system.skills" type="text" value="{{system.skills}}" placeholder="{{localize "ATDC.npc.skills.label"}}">{{system.skills}}</textarea>
     <textarea name="system.glance" type="text" value="{{system.glance}}" placeholder="{{localize "ATDC.npc.glance.label"}}">{{system.glance}}</textarea>
     <textarea name="system.motivation" type="text" value="{{system.motivation}}" placeholder="{{localize "ATDC.npc.motivation.label"}}">{{system.motivation}}</textarea>
-  </header>
-  
-  {{!-- Notes --}}
-  <div>
+
+    {{!-- Notes --}}
+    <div>
       <h2>{{localize "ATDC.npc.notes.label"}}</h2>
       <div class="notes">
-          {{editor system.notes target="system.notes" button=true engine="prosemirror" collaborate=false}}
+        {{editor system.notes target="system.notes" button=true engine="prosemirror" collaborate=false}}
       </div>
-  </div>
+    </div>
+  </header>
+
+  <!-- {{!-- Sheet Tab Navigation --}}
+  <nav class="sheet-tabs tabs" data-group="primary">
+    <a class="item" data-tab="main">{{localize "ATDC.actor.tabs.main.label"}}</a>
+    <a class="item" data-tab="biography">{{localize "ATDC.actor.tabs.biography.label"}}</a>
+    <a class="item" data-tab="relationships">{{localize "ATDC.actor.tabs.relationships.label"}}</a>
+  </nav>
+
+  {{!-- Sheet Body --}}
+  <section class="sheet-body">
+
+    {{!--  Tab --}}
+    <div class="tab main" data-group="primary" data-tab="main">
+      
+    </div>
+
+    {{!--  Tab --}}
+    <div class="tab biography" data-group="primary" data-tab="biography">
+      
+    </div>
+
+    {{!--  Tab --}}
+    <div class="tab relationships" data-group="primary" data-tab="relationships">
+      
+    </div> -->
+
+  </section>
 
 </form>
