--- a/scss/global/_components.scss
+++ b/scss/global/_components.scss
@@ -114,3 +114,65 @@
         margin: 0;
     }    
 }
+
+// Heat
+
+.clock-panel {
+  position: absolute;
+  top: 15px;
+  right: 320px;
+
+  .editable {
+    pointer-events: initial;
+  }
+
+  .clock-entry {
+    background: rgba(15, 15, 15, 0.7);
+    box-shadow: 0 0 4px rgba(0, 0, 0, 0.5);
+    display: flex;
+    flex-direction: row-reverse;
+    height: 44px;
+    border-radius: 5px 22px 22px 5px;
+
+    .name {
+      padding: 0 4px 2px 4px;
+      color: white;
+      font-size: 2em;
+    }
+  
+    .clock {
+      cursor: pointer;
+      width: 44px;
+      height: 44px;
+  
+      --spoke-width: 2px;
+  
+      align-self: center;
+      aspect-ratio: 1 / 1;
+  
+      --filled-ratio: calc(var(--filled) / var(--areas) * 1turn);
+      background: conic-gradient(red var(--filled-ratio), white var(--filled-ratio) 1turn);
+      border-radius: 50%;
+      border: black var(--spoke-width) solid;
+  
+      position: relative;
+    }
+  
+    .clock .spoke {
+      width: var(--spoke-width);
+  
+      /* Make the spokes slightly larger than the inner radius so they overlay half the outer border, preventing subpixel gaps */
+      height: calc(50% + .5 * var(--spoke-width));
+  
+      top: calc(-.5 * var(--spoke-width));
+      right: calc(50% - var(--spoke-width) / 2);
+  
+      background: black;
+      position: absolute;
+  
+      transform-origin: center bottom;
+      transform: rotate(calc((var(--index) * 1turn) / var(--areas)));
+    }
+  }
+
+}
