--- a/templates/panel/heat-panel.hbs
+++ b/templates/panel/heat-panel.hbs
@@ -1,5 +1,10 @@
-<section class="clock-panel {{#if @root.editable}}editable{{/if}} ">
+<section class="clock-panel {{#if @root.editable}}editable{{/if}} top">
     <div class="clock-entry">
+        {{log '@root.editable ' @root.editable}}
+        {{log 'clock.max ' clock.max}}
+        {{log 'clock.value ' clock.value}}
+        {{log 'clock.spokes ' clock.spokes}}
+        {{log 'clock.name ' clock.name}}
         <div class="clock" style="--areas: {{clock.max}}; --filled: {{clock.value}}">
             {{#each clock.spokes}}
                 <div class="spoke" style="--index: {{ this }}"></div>
