--- a/templates/panel/heat-panel.html
+++ b/templates/panel/heat-panel.html
@@ -1,5 +1,10 @@
-<section class="heat">
-    <div class="on-click">
-        HEAT!
+<section class="heat-panel">
+    <div class="heat">
+        <div class="clock on-click" style="--areas: {{heat.max}}; --filled: {{heat.value}}">
+            {{#each heat.spokes}}
+                <div class="spoke" style="--index: {{ this }}"></div>
+            {{/each}}
+        </div>
+        <div class="name">HEAT</div>
     </div>
 </section>
