Heat is working!

--- a/scss/global/_components.scss
+++ b/scss/global/_components.scss
@@ -128,7 +128,7 @@
   }
 
   .heat {
-    background: rgba(15, 15, 15, 0.7);
+    background: #363636;
     border: rgb(97, 97, 97) 1px solid;
     box-shadow: 0 0 4px rgba(0, 0, 0, 0.5);
     display: flex;
@@ -138,7 +138,7 @@
 
     .name {
       padding: 0 10px 0 10px;
-      color: white;
+      color: #eb7602;
       font-size: 2em;
       align-self: center;
       margin: 0;
@@ -146,8 +146,9 @@
 
     .clock {
       cursor: pointer;
-      width: 65px;
-      height: 65px;
+      width: 54px;
+      height: 54px;
+      box-shadow: 0 0 8px rgba(0, 0, 0, 0.5);
 
       --spoke-width: 1px;
 
@@ -155,27 +156,27 @@
       aspect-ratio: 1 / 1;
 
       --filled-ratio: calc(var(--filled) / var(--areas) * 1turn);
-      background: conic-gradient(red var(--filled-ratio), white var(--filled-ratio) 1turn);
+      background: conic-gradient(#eb7602 var(--filled-ratio), rgb(191 191 191) var(--filled-ratio) 0.4turn, rgb(175 175 175) var(--filled-ratio) 0.7turn, rgb(144 144 144) var(--filled-ratio) 0.9turn, rgb(128 128 128) var(--filled-ratio) 1turn);
       border-radius: 50%;
-      border: black var(--spoke-width) solid;
+      border: rgb(97, 97, 97) var(--spoke-width) solid;
 
       position: relative;
-    }
 
-    .clock .spoke {
-      width: var(--spoke-width);
-
-      /* Make the spokes slightly larger than the inner radius so they overlay half the outer border, preventing subpixel gaps */
-      height: calc(50% + .5 * var(--spoke-width));
-
-      top: calc(-.5 * var(--spoke-width));
-      right: calc(50% - var(--spoke-width) / 2);
-
-      background: black;
-      position: absolute;
-
-      transform-origin: center bottom;
-      transform: rotate(calc((var(--index) * 1turn) / var(--areas)));
+      .spoke {
+        width: var(--spoke-width);
+  
+        /* Make the spokes slightly larger than the inner radius so they overlay half the outer border, preventing subpixel gaps */
+        height: calc(50% + .5 * var(--spoke-width));
+  
+        top: calc(-.5 * var(--spoke-width));
+        right: calc(50% - var(--spoke-width) / 2);
+  
+        background: rgb(97, 97, 97);
+        position: absolute;
+  
+        transform-origin: center bottom;
+        transform: rotate(calc((var(--index) * 1turn) / var(--areas)));
+      }
     }
   }
 }
