--- a/templates/panel/heat-panel.html
+++ b/templates/panel/heat-panel.html
@@ -1,7 +1,12 @@
-<section class="heat-panel">
+<section class="heat-panel" {{#if @root.editable}}editable{{/if}}>
+    {{log '@root.editable' @root.editable}}
+    {{log 'max' max}}
+    {{log 'currentHeat' currentHeat}}
     <div class="heat">
-        <div class="clock on-click" style="--areas: {{heat.max}}; --filled: {{heat.value}}">
-            {{#each heat.spokes}}
+        <div class="clock on-click" style="--areas: {{max}}; --filled: {{currentHeat}}">
+            {{log 'spokes' spokes}}
+            {{#each spokes}}
+                {{log 'heat.spokes.index' this}}
                 <div class="spoke" style="--index: {{ this }}"></div>
             {{/each}}
         </div>
