made a clear for heat

--- a/templates/panel/heat-panel.html
+++ b/templates/panel/heat-panel.html
@@ -10,6 +10,6 @@
                 <div class="spoke" style="--index: {{ this }}"></div>
             {{/each}}
         </div>
-        <div class="name">HEAT</div>
+        <div class="name on-click-clear">HEAT</div>
     </div>
 </section>
