--- a/scss/components/_npcs.scss
+++ b/scss/components/_npcs.scss
@@ -1,20 +1,34 @@
 .npc {
-  height: 100%;
-  margin: 0px 5px;
+  .sheet-header {
+    flex: 0 auto;
+    overflow: hidden;
+    display: flex;
+    flex-direction: row;
+    flex-wrap: wrap;
+    justify-content: flex-start;
+    margin: 5px;
 
-  img {
-    height: 300px;
-    margin-bottom: 5px;
-  }
+    .profile-img {
+      flex: 0 0 190px;
+      height: 190px;
+      margin-right: 5px;
+    }
 
-  header {
-    height: 100%;
+    .header-fields {
+      flex: 1;
+    }
 
-    input[type="text"] {
-      text-align: center;
-      font-size: 2em;
-      margin: 5px 0;
-      padding: 20px;
+    h1.charname {
+      height: 30px;
+      padding: 0px;
+      margin: 5px 5px 5px 5px;
+      font-size: 1.5em;
+
+      input[type="text"] {
+        width: 100%;
+        height: 100%;
+        margin: 0;
+      }
     }
 
     textarea {
@@ -24,14 +38,14 @@
   }
 
   .notes {
-    height: 215px;
-    border-radius: 5px;
-    border: 2px solid #00000047;
-    padding: 0 5px 0 5px;
-    background: rgba(0, 0, 0, 0.05);
+    
 
     .editor {
-      height: 100%;
+        height: 215px;
+        border-radius: 5px;
+        border: 2px solid #00000047;
+        padding: 0 5px 0 5px;
+        background: rgba(0, 0, 0, 0.05);
     }
   }
 }
