converted html to hbs

--- a/templates/actor/actor-character-sheet.hbs
+++ b/templates/actor/actor-character-sheet.hbs
@@ -83,17 +83,17 @@
 
     {{!-- Expertise, Actions & Gear Tab --}}
     <div class="tab main" data-group="primary" data-tab="main">
-      {{> "systems/againstthedarkconspiracy/templates/actor/parts/actor-main.html"}}
+      {{> "systems/againstthedarkconspiracy/templates/actor/parts/actor-main.hbs"}}
     </div>
 
     {{!-- Biography Tab --}}
     <div class="tab biography" data-group="primary" data-tab="biography">
-      {{> "systems/againstthedarkconspiracy/templates/actor/parts/actor-biography.html"}}
+      {{> "systems/againstthedarkconspiracy/templates/actor/parts/actor-biography.hbs"}}
     </div>
 
     {{!-- relationships Tab --}}
     <div class="tab relationships" data-group="primary" data-tab="relationships">
-      {{> "systems/againstthedarkconspiracy/templates/actor/parts/actor-relationships.html"}}
+      {{> "systems/againstthedarkconspiracy/templates/actor/parts/actor-relationships.hbs"}}
     </div>
 
   </section>
