--- a/templates/actor/actor-nameless-sheet.hbs
+++ b/templates/actor/actor-nameless-sheet.hbs
@@ -34,7 +34,7 @@
           </div>
           <div class="type flexrow">
             <h3>Type</h3>
-            <select class="changeable" name="system.type.index" data-type="String">
+            <select class="npc-type-change" name="system.type.index" data-roll-type="toggle-stress" data-npc-type="nameless" data-type="String">
               {{#select system.type.index}}
                 {{#each system.type.options as |option key|}}
                   <option value="{{key}}">{{localize option}}</option>
