--- a/scss/components/_sheets.scss
+++ b/scss/components/_sheets.scss
@@ -1,4 +1,7 @@
 .window-content {
+  margin: 0;
+  padding: 0;
+  
   h1 {
     font-weight: bold;
     border: none;
@@ -24,59 +27,88 @@
     background: rgb(0 0 0 / 5%);
     padding: 5px;
   }
-}
 
-.underline-input {
-  box-sizing: border-box;
-  border: none;
-  background: none;
-  border-bottom: 1px solid black;
-  border-radius: 0;
-}
-
-.box {
-  border: 1px solid black;
-  background-color: rgb(128 128 128 / 5%);
-  padding: 5px;
-  margin: 5px;
-  align-items: center;
-
-  .full-width {
-    width: -webkit-fill-available;
+  .underline-input {
+    box-sizing: border-box;
+    border: none;
+    background: none;
+    border-bottom: 1px solid black;
+    border-radius: 0;
   }
-}
-
-.window-content {
-  margin: 0;
-  padding: 0;
-}
-
-nav.sheet-tabs {
-  border-top: 1px solid black;
-  border-bottom: 1px solid black;
-  background-color: rgb(128 128 128 / 20%);
-}
-
-.sheet-tabs {
-  flex: 0;
-}
-
-.sheet-body,
-.sheet-body .tab,
-.sheet-body .tab .editor {
-  height: auto;
-}
-
-.sheet-body {
-  margin: 5px;
-}
-
-.tox {
-  .tox-editor-container {
-    background: $c-white;
+  
+  .box {
+    border: 1px solid black;
+    background-color: rgb(128 128 128 / 5%);
+    padding: 5px;
+    margin: 5px;
+    align-items: center;
+  
+    .full-width {
+      width: -webkit-fill-available;
+    }
+  }
+  
+  nav.sheet-tabs {
+    border-top: 1px solid black;
+    border-bottom: 1px solid black;
+    background-color: rgb(128 128 128 / 20%);
+  }
+  
+  .sheet-tabs {
+    flex: 0;
+  }
+  
+  .sheet-body,
+  .sheet-body .tab,
+  .sheet-body .tab .editor {
+    height: auto;
+  }
+  
+  .sheet-body {
+    margin: 5px;
+  }
+  
+  .tox {
+    .tox-editor-container {
+      background: $c-white;
+    }
+  
+    .tox-edit-area {
+      padding: 0 8px;
+    }
   }
 
-  .tox-edit-area {
-    padding: 0 8px;
+  .gear,
+  .contact {
+    flex: 0 auto;
+    overflow: hidden;
+    display: flex;
+    flex-direction: row;
+    flex-wrap: wrap;
+    justify-content: flex-start;
+    margin: 5px;
+
+    .profile-img {
+      flex: 0 0 190px;
+      height: 190px;
+      margin-right: 5px;
+    }
+
+    input[type="text"] {
+      height: auto;
+    }
+
+    .expertise {
+      grid-column: 2 / span 2;
+
+      select {
+        min-width: 0;
+        max-width: 100%;
+      }
+    }
+
+    textarea {
+      height: 94px;
+    }
   }
 }
