--- a/templates/actor/actor-nameless-sheet.hbs
+++ b/templates/actor/actor-nameless-sheet.hbs
@@ -46,27 +46,52 @@
 
   </header>
 
-  {{!-- Sheet Tab Navigation --}}
-  <nav class="sheet-tabs tabs" data-group="primary">
-    <a class="item" data-tab="main">Main</a>
-    <a class="item" data-tab="notes">Notes</a>
-  </nav>
-
   {{!-- Sheet Body --}}
-  <section class="sheet-body">
+  <section>
 
     {{!--  Tab --}}
-    <div class="tab main" data-group="primary" data-tab="main">
-      Things go here.
-    </div>
-
-    {{!--  Tab --}}
-    <div class="tab notes" data-group="primary" data-tab="notes">
-      {{!-- Notes --}}
-      <h2>{{localize "ATDC.npc.notes.label"}}</h2>
-      <div class="notes">
-        {{editor system.notes target="system.notes" button=true engine="prosemirror" collaborate=false}}
+    <div class="main">
+      <div class="flexrow">
+        <div class="flexcol">
+          {{!-- <div class="box gear">
+            <h2>{{localize "ATDC.actor.gear.label"}}</h2>
+            <ol class="items-list">
+              <li class="item flexrow items-header">
+                <div class="item-name">{{localize "ATDC.item.gearList.name.label"}}</div>
+                <div class="item-tags">{{localize "ATDC.item.gearList.tags.label"}}</div>
+                <div class="item-load">{{localize "ATDC.item.gearList.load.label"}}</div>
+                <div class="item-controls">
+                  <a class="item-control item-create" title="Create item" data-type="gear"><i class="fas fa-plus"></i></a>
+                </div>
+              </li>
+              {{#each gear as |item id|}}
+                <li class="item flexrow" data-item-id="{{item._id}}">
+                  <div class="item-name">
+                    <div class="item-image">
+                      <img src="{{item.img}}" title="{{item.name}}" width="24" height="24"/>
+                    </div>
+                    <h4>{{item.name}}</h4>
+                  </div>
+                  <div class="item-tags item-prop">{{item.system.tags}}</div>
+                  <div class="item-load item-prop">{{item.system.load}}</div>
+                  <div class="item-controls">
+                    <a class="item-control item-edit" title="Edit Item"><i class="fas fa-edit"></i></a>
+                    <a class="item-control item-delete" title="Delete Item"><i class="fas fa-trash"></i></a>
+                  </div>
+                </li>
+              {{/each}}
+            </ol>
+          </div> --}}
+        </div>
+        <div class="flexcol">
+          {{!-- Notes --}}
+          <h2>{{localize "ATDC.npc.notes.label"}}</h2>
+          <div class="notes">
+            {{editor system.notes target="system.notes" button=true engine="prosemirror" collaborate=false}}
+          </div>
+        </div>
       </div>
+      
     </div>
 
   </section>
