--- a/templates/actor/parts/actor-relationships.hbs
+++ b/templates/actor/parts/actor-relationships.hbs
@@ -18,8 +18,8 @@
 
     <div class="box">
       <div class="flexrow contacts-header">
-        <h3>{{localize "ATDC.actor.relationships.contacts.label"}}</h3>
-        <a class="item-control item-create" title="Create item" data-type="contact"><i class="fas fa-plus"></i> {{localize "ATDC.item.contactList.call.label"}}</a>
+        <h3 class="flexrow">{{localize "ATDC.actor.relationships.contacts.label"}} <a class="item-control item-create" title="Create item" data-type="contact"><i class="fas fa-plus"></i> {{localize "ATDC.item.contactList.call.label"}}</a></h3>
+        
       </div>
       <ol class="items-list">
         <li class="item flexrow items-header">
