--- a/scss/components/_npcs.scss
+++ b/scss/components/_npcs.scss
@@ -63,15 +63,20 @@
     
   }
 
-  .notes {
-    
+  .main {
+    margin-left: 5px;
+    margin-right: 5px;
+    margin-bottom: 5px;
 
-    .editor {
-        height: 215px;
-        border-radius: 5px;
-        border: 2px solid #00000047;
-        padding: 0 5px 0 5px;
-        background: rgba(0, 0, 0, 0.05);
+    .notes {
+  
+      .editor {
+          height: 215px;
+          border-radius: 5px;
+          border: 2px solid #00000047;
+          padding: 0 5px 0 5px;
+          background: rgba(0, 0, 0, 0.05);
+      }
     }
   }
 }
