--- a/templates/actor/actor-nameless-sheet.hbs
+++ b/templates/actor/actor-nameless-sheet.hbs
@@ -53,7 +53,7 @@
     <div class="main">
       <div class="flexrow">
         <div class="flexcol">
-          {{!-- <div class="box gear">
+          <div class="gear">
             <h2>{{localize "ATDC.actor.gear.label"}}</h2>
             <ol class="items-list">
               <li class="item flexrow items-header">
@@ -81,13 +81,15 @@
                 </li>
               {{/each}}
             </ol>
-          </div> --}}
+          </div>
         </div>
         <div class="flexcol">
           {{!-- Notes --}}
-          <h2>{{localize "ATDC.npc.notes.label"}}</h2>
-          <div class="notes">
-            {{editor system.notes target="system.notes" button=true engine="prosemirror" collaborate=false}}
+          <div>
+            <h2>{{localize "ATDC.npc.notes.label"}}</h2>
+            <div class="notes">
+              {{editor system.notes target="system.notes" button=true engine="prosemirror" collaborate=false}}
+            </div>
           </div>
         </div>
       </div>
