--- a/scss/components/_npcs.scss
+++ b/scss/components/_npcs.scss
@@ -6,7 +6,7 @@
     flex-direction: row;
     flex-wrap: wrap;
     justify-content: flex-start;
-    margin: 5px;
+    margin: 10px 10px 5px 10px;
 
     .profile-img {
       flex: 0 0 190px;
@@ -16,20 +16,47 @@
 
     .header-fields {
       flex: 1;
-    }
+      align-self: flex-start;
 
-    h1.charname {
-      margin: 0px 0px 5px 0px;
+      .field {
+        margin-bottom: 5px;
+      }
 
-      input[type="text"] {
+      input[type=text] {
         width: 100%;
-        height: 100%;
+        box-sizing: border-box;
+        border: none;
+        background: none;
+        border-bottom: 1px solid black;
+        border-radius: 0;
         margin: 0;
       }
+
+      h4 {
+        flex: initial;
+        margin: 0 10px 0 0;
+        align-self: center;
+      }
+    }
+
+    h1.char-name {
+      margin: 0px 0px 5px 0px;
+      
+      input[type=text] {
+        height: 30px;
+        line-height: 30px;
+      }
+    }
+    
+    .char-name-label {
+      flex: 0;
+      align-self: center;
+      margin-right: 10px;
     }
 
     .resources{
         align-items: center;
+        margin: 10px 0px 0px 0px;
 
         .stress {
             justify-self: flex-start;
