--- a/scss/components/_sheets.scss
+++ b/scss/components/_sheets.scss
@@ -96,7 +96,11 @@
   }
 
   .gear,
-  .contact {
+  .contact,
+  .power,
+  .compulsion,
+  .deterrent,
+  .vulnerability {
     flex: 1;
     align-content: flex-start;
     overflow: hidden;
